feat(employee-authentication): change the structure and share models … (#84)
* feat(employee-authentication): change the structure and share models to handle employee auth

* feat(employee-creation): add an endpoint to create employees

* feat(employee-creation): move the Franchise model to the companies module

* feat(employee-authentication): add an endpoint to create an employee session

* feat(employee-authentication): return the employee roles

* feat(employee-authentication): add an endpoint to reset refresh tokens

* feat(employee-authentication): add email verification for employees

* feat(employee-authentication): add phone number verification for employees

* feat(employee-authentication): add tests

* feat(tests): fix .test.env file

* feat(postman): update the postman collection file

* feat(employee-authentication): add an endpoint to ensure only specific roles to access the resource

* feat(employee-authentication): finish the post /employee endpoint

* fix(tests): fix .test.env

* fix(tests): fix test workflow using 'vain' as the default database

* docs(swagger): update the swagger docs

* docs(postman): update the exported postman collection

* feat(email-template): add new email template for employees account verifications

* fix(employee-authentication): update employee password when asking for a new email

* fix(employee-authentication): fix tests
