# src/modules/companies/services/ProcessStripeWebhookService/webhooksHandlers/handleCustomerSubscriptionTrialWillEnd.js
@@ -1,9 +1,9 @@
 import { NotFoundError } from '../../../../../shared/errors'
 import buildDirectEmailParams from '../../../../../shared/helpers/buildDirectEmailParams'
+import Employee from '../../../../../shared/infra/sequelize/models/Employee'
 import SendEmailJob from '../../../../../shared/jobs/SendEmail'
 import Queue from '../../../../../shared/lib/Queue'
 import Company from '../../../infra/sequelize/models/Company'
-import Employee from '../../../infra/sequelize/models/Employee'
 
 export const handleCustomerSubscriptionTrialWillEnd = async (payload) => {
   const { object: subscription } = payload.data
