# src/modules/employees/infra/http/validators/resendPhoneNumberVerificationCodeValidator.js
@@ -1,0 +1,7 @@
+import Joi from 'joi'
+
+const resendPhoneNumberVerificationCodeSchema = Joi.object({
+  employee_id: Joi.string().required().label('ID da conta'),
+})
+
+export default resendPhoneNumberVerificationCodeSchema
